--- a/hugo.yaml
+++ b/hugo.yaml
@@ -13,6 +13,7 @@ permalinks:
   flashcards: /:filename/
   fragments: /:filename/
   generative-works: /:filename/
+  hello-world: /:filename/
   live-stream: /:filename/
   posts: /:slug/
   questions: /:filename/
