--- a/hugo.yaml
+++ b/hugo.yaml
@@ -14,6 +14,7 @@ permalinks:
   fragments: /:filename/
   generative-works: /:filename/
   hello-world: /:filename/
+  i-am-a-persistent-item: /:filename/
   live-stream: /:filename/
   posts: /:slug/
   questions: /:filename/
